test/invalid-syntax/parentheses/unterminated.djs
very x is 06 * (03 + 04
